refactor tall dataset construction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,10 @@ importFrom(DGEobj,getItem)
 importFrom(assertthat,assert_that)
 importFrom(canvasXpress,canvasXpress)
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
@@ -39,4 +41,6 @@ importFrom(stats,median)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(stringr,str_c)
+importFrom(tibble,rownames_to_column)
+importFrom(tidyr,gather)
 importFrom(utils,packageVersion)
