refactor normalized dataset construction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ importFrom(DGEobj,getItem)
 importFrom(assertthat,assert_that)
 importFrom(canvasXpress,canvasXpress)
 importFrom(dplyr,arrange)
-importFrom(dplyr,as_tibble)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
