refactored build_cx_density_plot function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
@@ -43,4 +44,5 @@ importFrom(stats,var)
 importFrom(stringr,str_c)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
+importFrom(tidyr,spread)
 importFrom(utils,packageVersion)
