--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ import(ggrepel)
 import(magrittr)
 importFrom(DGEobj,getItem)
 importFrom(assertthat,assert_that)
+importFrom(assertthat,see_if)
 importFrom(canvasXpress,canvasXpress)
 importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
