- refactored packages calling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ import(ggplot2)
 import(ggrepel)
 import(magrittr)
 importFrom(DGEobj,getItem)
+importFrom(DGEobj.utils,convertCounts)
 importFrom(assertthat,assert_that)
 importFrom(canvasXpress,canvasXpress)
 importFrom(dplyr,arrange)
