--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,11 +19,15 @@ import(ggplot2)
 import(ggrepel)
 import(magrittr)
 importFrom(DGEobj,getItem)
+importFrom(DGEobj.utils,convertCounts)
 importFrom(assertthat,assert_that)
 importFrom(canvasXpress,canvasXpress)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
@@ -39,4 +43,6 @@ importFrom(stats,median)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(stringr,str_c)
+importFrom(tidyr,gather)
+importFrom(tidyr,spread)
 importFrom(utils,packageVersion)
