--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ import(magrittr)
 importFrom(DGEobj,getItem)
 importFrom(DGEobj.utils,convertCounts)
 importFrom(assertthat,assert_that)
+importFrom(assertthat,see_if)
 importFrom(canvasXpress,canvasXpress)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
