Updated obsplot, tidyContrasts & tidyintensity files, rd, vignette and Namespacefile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,16 +9,18 @@ export(ggplotMDS)
 export(logRatioPlot)
 export(mapDGEobj)
 export(obsPlot)
-export(obsPlot2)
 export(plotDispersion)
 export(plotNorm)
 export(plotPvalHist)
 export(profilePlot)
+export(tidyContrasts)
+export(tidyIntensity)
 export(volcanoPlot)
 import(ggplot2)
 import(ggrepel)
 import(magrittr)
 importFrom(DGEobj,getItem)
+importFrom(DGEobj,getType)
 importFrom(DGEobj.utils,convertCounts)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,see_if)
@@ -39,11 +41,11 @@ importFrom(igraph,graph_from_data_frame)
 importFrom(limma,plotMDS)
 importFrom(stats,as.dist)
 importFrom(stats,cmdscale)
-importFrom(stats,complete.cases)
 importFrom(stats,median)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(stringr,str_c)
+importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
 importFrom(tidyr,spread)
 importFrom(utils,packageVersion)
