Updated testcases and fixed legends and data point related bugs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(canvasXpress,canvasXpress)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
@@ -38,7 +39,6 @@ importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
 importFrom(ggrepel,geom_text_repel)
-importFrom(grid,viewport)
 importFrom(htmlwidgets,JS)
 importFrom(igraph,graph_from_data_frame)
 importFrom(limma,plotMDS)
