Updated function definition

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
