--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(canvasXpress,canvasXpress)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,count)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
