--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(htmlwidgets,JS)
 importFrom(igraph,graph_from_data_frame)
 importFrom(limma,plotMDS)
 importFrom(magrittr,set_rownames)
+importFrom(rlang,sym)
 importFrom(stats,as.dist)
 importFrom(stats,cmdscale)
 importFrom(stats,median)
