- Removed CMD check warnings and notes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,12 @@ importFrom(DGEobj.utils,convertCounts)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,see_if)
 importFrom(canvasXpress,canvasXpress)
+importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
@@ -39,6 +41,7 @@ importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
 importFrom(ggrepel,geom_text_repel)
+importFrom(grDevices,col2rgb)
 importFrom(grid,viewport)
 importFrom(htmlwidgets,JS)
 importFrom(igraph,graph_from_data_frame)
