--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,9 +28,11 @@ importFrom(canvasXpress,canvasXpress)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
@@ -38,7 +40,6 @@ importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
 importFrom(ggrepel,geom_text_repel)
-importFrom(grid,viewport)
 importFrom(htmlwidgets,JS)
 importFrom(igraph,graph_from_data_frame)
 importFrom(limma,plotMDS)
